--- a/.travis.yml
+++ b/.travis.yml
@@ -121,7 +121,7 @@ jobs:
       cache:
         packages: true
         ccache: true
-      r_packages:
+      r_binary_packages:
         - covr
         - futile.logger
         - lava
@@ -143,7 +143,7 @@ jobs:
       cache:
         packages: true
         ccache: true
-      r_packages:
+      r_binary_packages:
         - covr
         - futile.logger
         - lava
