--- a/R-package/targeted/DESCRIPTION
+++ b/R-package/targeted/DESCRIPTION
@@ -5,7 +5,7 @@ Version: 0.1
 Date: 2020-04-11
 Author: Klaus Holst
 Maintainer: Klaus Holst <klaus.holst@maersk.com>
-Description: Various methods for targeted and semiparametric inference
+Description: Various methods for targeted and semiparametric inference.
 Depends:
     R (>= 3.3),
     lava (>= 1.6.3)
