targets clean-up. optimx added to packages for 'targeted'

--- a/.travis.yml
+++ b/.travis.yml
@@ -129,6 +129,7 @@ jobs:
             - r-cran-futile.logger
             - r-cran-lava
             - r-cran-numderiv
+            - r-cran-optimx            
             - r-cran-rcpp
             - r-cran-rcpparmadillo
             - r-cran-testthat
