--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,8 @@ jobs:
 
     - name: "python: source"
       language: python
-      # Only run on deploy branch or commits tagged 'py:v...'      
-      if: (branch IN (deploy)) OR (tag =~ ^py:v)
+      # Only run on deploy branch or commits tagged 'py_v...'      
+      if: (branch IN (deploy)) OR (tag =~ ^py_v)
       cache: pip
       addons:
         apt:
@@ -35,7 +35,7 @@ jobs:
     # --------------------------------------------------------------------------------
 
     - name: "python: linux wheels"
-      if: (branch IN (deploy)) OR (tag =~ ^py:v)
+      if: (branch IN (deploy)) OR (tag =~ ^py_v)
       services: docker
       language: python      
       install:
@@ -56,7 +56,7 @@ jobs:
     # --------------------------------------------------------------------------------
    
     - name: "python: osx wheels"
-      if: (branch IN (deploy)) OR (tag =~ ^py:v)
+      if: (branch IN (deploy)) OR (tag =~ ^py_v)
       os: osx
       language: shell
       install:
