--- a/R-package/targeted/NAMESPACE
+++ b/R-package/targeted/NAMESPACE
@@ -5,6 +5,7 @@ S3method(iid,targeted)
 S3method(logLik,targeted)
 S3method(print,summary.ace.targeted)
 S3method(print,summary.riskreg.targeted)
+S3method(print,summary.targeted)
 S3method(print,targeted)
 S3method(summary,ace.targeted)
 S3method(summary,riskreg.targeted)
@@ -14,8 +15,8 @@ export(Us)
 export(ace)
 export(aipw)
 export(riskreg)
+export(riskreg_fit)
 export(riskreg_mle)
-export(riskreg_semi)
 import(Rcpp)
 import(methods)
 importFrom(futile.logger,flog.debug)
