--- a/python-package/Pipfile
+++ b/python-package/Pipfile
@@ -13,7 +13,7 @@ sphinx-autobuild = "*"
 sphinx-autodoc-typehints = "*"
 sphinx-rtd-theme = "*"
 m2r = "*"
-mock = "*"
+unittest.mock = "*"
 autodoc = "*"
 coloredlogs = "*"
 recommonmark = "*"
