--- a/config/requirements.txt
+++ b/config/requirements.txt
@@ -4,18 +4,18 @@ patsy>=0.5.0
 scipy>=1.3
 statsmodels>=0.10
 
+autodoc
 cmake>=3.10
 coloredlogs>=10.0
-pybind11>=2.4.2
-pytest>=5.2.0
-pytest-runner>=5.0
-python-dateutil==2.8.0
 flake8>=3.7.0
+m2r
+pybind11>=2.4.2
 pytest-cov
+pytest-runner>=5.0
+pytest>=5.2.0
+python-dateutil==2.8.0
 sphinx
 sphinx-autobuild
 sphinx-autodoc-typehints
 sphinx-rtd-theme
-m2r
-mock
-autodoc
+unittest.mock
