--- a/config/requirements.txt
+++ b/config/requirements.txt
@@ -14,8 +14,8 @@ pytest-cov
 pytest-runner>=5.0
 pytest>=5.2.0
 python-dateutil==2.8.0
+recommonmark
 sphinx
 sphinx-autobuild
 sphinx-autodoc-typehints
 sphinx-rtd-theme
-unittest.mock
