--- a/R-package/gof/DESCRIPTION
+++ b/R-package/gof/DESCRIPTION
@@ -4,7 +4,7 @@ Title: Model Diagnostics Based on Cumulative Residuals
 Version: 1.0.1
 Date: 2020-03-15
 Author: Klaus K. Holst
-Maintainer: Klaus. K. Holst <klaus@holst.it>
+Maintainer: Klaus K. Holst <klaus@holst.it>
 Description: Implementation of model-checking techniques for generalized linear
     models and linear structural equation models based on cumulative residuals
     (Lin et al. (2002) <doi:10.1111/j.0006-341x.2002.00001.x>).
