--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,9 +3,13 @@ Type: Package
 Title: Targeted inference
 Version: 0.1
 Date: 2020-04-11
-Author: Klaus Holst
-Maintainer: Klaus Holst <klaus.holst@maersk.com>
-Description: Various methods for targeted and semiparametric inference.
+Author: Klaus K. Holst
+Maintainer: Klaus K. Holst <klaus@holst.it>
+Description: Various methods for targeted and semiparametric inference including
+	     augmented inverse probability weighted estimators for missing data and
+	     causal inference (Bang and Robins (2005) <doi:10.1111/j.1541-0420.2005.00377.x>)
+	     and estimators for risk differences and relative risks (Richardon et al (2018)
+	     <doi:10.1080/01621459.2016.1192546>).
 Depends:
     R (>= 3.3),
     lava (>= 1.6.3)
