Changelog added and description file updated

--- a/R-package/targeted/DESCRIPTION
+++ b/R-package/targeted/DESCRIPTION
@@ -3,6 +3,7 @@ Type: Package
 Title: Targeted inference
 Version: 0.1
 Date: 2020-04-11
+Authors@R: c(person("Klaus K.", "Holst", email="klaus@holst.it", role=c("aut", "cre")))
 Author: Klaus K. Holst
 Maintainer: Klaus K. Holst <klaus@holst.it>
 Description: Various methods for targeted and semiparametric inference including
@@ -12,9 +13,11 @@ Description: Various methods for targeted and semiparametric inference including
 	     <doi:10.1080/01621459.2016.1192546>).
 Depends:
     R (>= 3.3),
-    lava (>= 1.6.3)
+    lava (>= 1.6.7)
 Suggests:
     testthat (>= 0.11)
+URL: https://github.com/kkholst/targeted
+BugReports: https://github.com/kkholst/targeted/issues
 License: Apache License (== 2.0) | file LICENSE
 Imports: methods, Rcpp (>= 1.0.0), optimx, futile.logger
 LinkingTo: Rcpp, RcppArmadillo
