--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,17 @@
 language: r
+
 r:
   - release
   - devel
+
 r_check_args: --as-cran --run-donttest
+
 warnings_are_errors: true
+
 cache: packages
-  
-  
+
+r_binary_packages:
+  - covr
+
+after_success:
+  - Rscript -e 'library("covr"); codecov(type="all")'
