--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,7 +9,7 @@ Maintainer: Klaus K. Holst <klaus@holst.it>
 Description: Various methods for targeted and semiparametric inference including
 	     augmented inverse probability weighted estimators for missing data and
 	     causal inference (Bang and Robins (2005) <doi:10.1111/j.1541-0420.2005.00377.x>)
-	     and estimators for risk differences and relative risks (Richardon et al. (2018)
+	     and estimators for risk differences and relative risks (Richardson et al. (2017)
 	     <doi:10.1080/01621459.2016.1192546>).
 Depends:
     R (>= 3.3),
