--- a/config/requirements.txt
+++ b/config/requirements.txt
@@ -5,8 +5,10 @@ scipy>=1.3
 statsmodels>=0.10
 
 autodoc
+breathe>=4.13.0
 cmake>=3.10
 coloredlogs>=10.0
+exhale
 flake8>=3.7.0
 m2r
 pybind11>=2.4.2
@@ -15,7 +17,7 @@ pytest-runner>=5.0
 pytest>=5.2.0
 python-dateutil==2.8.0
 recommonmark
-sphinx
+sphinx>=2.0
 sphinx-autobuild
 sphinx-autodoc-typehints
 sphinx-rtd-theme
