--- a/.travis.yml
+++ b/.travis.yml
@@ -187,7 +187,7 @@ jobs:
       script:
         - cd python-package
         - python3 setup.py install
-        - pytest --cov
+        - pytest --cov=targeted tests/
         - pytest
         - bin/test_targeted
         - python3 -m targeted
