--- a/python-package/pytest.ini
+++ b/python-package/pytest.ini
@@ -5,4 +5,4 @@ log_file_level = DEBUG
 log_file_format = %(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)
 log_file_date_format=%Y-%m-%d %H:%M:%S
 python_files = test_*.py
-#log_cli = true
+log_cli = true
