--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -18,4 +18,4 @@ formats:
 python:
   version: 3.7
   install:
-    - requirements: python-package/doc/requirements.txt
+    - requirements: doc/requirements.txt
