--- a/config/requirements.txt
+++ b/config/requirements.txt
@@ -5,7 +5,6 @@ scipy>=1.3
 statsmodels>=0.10
 
 autodoc
-breathe>=4.13.0
 cmake>=3.10
 coloredlogs>=10.0
 exhale
@@ -21,3 +20,9 @@ sphinx>=2.0
 sphinx-autobuild
 sphinx-autodoc-typehints
 sphinx-rtd-theme
+sphinx-sitemap>=2.0.0
+sphinx-gitstamp>=0.3.1
+IPython
+
+sphinx-rtd-theme
+guzzle_sphinx_theme
