--- a/.gitmodules
+++ b/.gitmodules
@@ -1,15 +1,16 @@
 [submodule "lib/pybind11"]
 	path = lib/pybind11
+	shallow = true
 	url = https://github.com/pybind/pybind11.git
 [submodule "lib/armadillo"]
 	path = lib/armadillo
+	shallow = true
 	url = https://gitlab.com/conradsnicta/armadillo-code.git
-[submodule "lib/unittest-cpp"]
-	path = lib/unittest-cpp
-	url = https://github.com/unittest-cpp/unittest-cpp
 [submodule "lib/spdlog"]
 	path = lib/spdlog
+	shallow = true
 	url = https://github.com/gabime/spdlog.git
 [submodule "lib/catch2"]
 	path = lib/catch2
+	shallow = true
 	url = https://github.com/catchorg/Catch2.git
