--- a/R-package/gof/DESCRIPTION
+++ b/R-package/gof/DESCRIPTION
@@ -18,7 +18,7 @@ Suggests:
     futile.logger,
     testthat (>= 0.11),
     numDeriv
-License: Apache License (== 2.0) | file LICENSE
+License: Apache License (== 2.0)
 LinkingTo: Rcpp, RcppArmadillo
 LazyLoad: yes
 NeedsCompilation: yes
