--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,7 +18,7 @@ Suggests:
     testthat (>= 0.11),
     knitr,
     rmarkdown
-URL: https://github.com/kkholst/targeted
+URL: https://kkholst.github.io/targeted/
 BugReports: https://github.com/kkholst/targeted/issues
 License: Apache License (== 2.0)
 Imports: methods, Rcpp (>= 1.0.0), optimx, futile.logger
