Adding knitr to dep. encoding removed from open call

--- a/.travis.yml
+++ b/.travis.yml
@@ -151,6 +151,7 @@ jobs:
       r_packages:
         - covr
         - pkgdown
+        - knitr
       install:
         - echo
       script:
@@ -171,6 +172,7 @@ jobs:
       r_packages:
         - covr
         - pkgdown
+        - knitr
       install:
         - echo
       script:
